cfn_benchmark/cfn_templates/fortunecookiezen__aws-cloud9/templates/aws-cloud9-vpc.yml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: >
  Creates a vpc and a single public subnet for Cloud9 environments
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: "Environment Configuration"
        Parameters:
        - CostCenter
        - Prefix
        - Owner
      - Label:
          default: "Network Configuration"
        Parameters:
        - VpcCidr
    ParameterLabels:
      VpcCidr:
        default: "VPC cidr block"
  Version:
    Description: 1.2
Parameters:
  CostCenter:
    Type: String
    MinLength: 5
    MaxLength: 7
    Description: "CostCenter - must be lower-case, limit 4 characters"
    AllowedPattern: "\\d{5,7}"
  Prefix:
    Type: String
    Description: tag prefix to help sort things out in the console
    Default: "Cloud9"
  Owner:
    Type: String
    Description: "email address of the the Owner of this stack"
    AllowedPattern: "^[\\w-\\+]+(\\.[\\w]+)*@[\\w-]+(\\.[\\w]+)*(\\.[a-z]{2,})$"
  VpcCidr:
    Type: String
    MinLength: 9
    MaxLength: 18
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: Must be a valid CIDR range in the form x.x.x.x/x
    Default: 10.255.254.0/23
Resources:
  Vpc:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: !Ref VpcCidr
      EnableDnsHostnames: true
      Tags:
        - Key: "Name"
          Value: !Join ["-", [!Ref Prefix, "vpc"]]
        - Key: "CostCenter"
          Value: !Ref CostCenter
        - Key: "Owner"
          Value: !Ref Owner

  VpcDefaultSecurityGroupEgress:
    Type: "AWS::EC2::SecurityGroupEgress"
    Properties:
      GroupId: !GetAtt [Vpc, DefaultSecurityGroup]
      IpProtocol: "6"
      ToPort: 443
      FromPort: 443
      CidrIp: !GetAtt Vpc.CidrBlock
      Description: Allow only vpc endpoint communication

  Igw:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Join ["-", [!Ref Prefix, "vpc-igw"]]
        - Key: CostCenter
          Value: !Ref CostCenter
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref Vpc
      InternetGatewayId: !Ref Igw
## end vpc resource definition
## begin route table definitions
  PublicSubnetRouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: "Name"
          Value: !Join ["-", [!Ref Prefix, "subnet-rt"]]
        - Key: "CostCenter"
          Value: !Ref CostCenter
        - Key: "Owner"
          Value: !Ref Owner
## end route table definitions
## begin route definitions
  PublicSubnetRouteDefault:
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref Igw
      RouteTableId: !Ref PublicSubnetRouteTable
## end route definitions
## begin public subnet definitions
  PublicSubnet: # Public Subnet in AZ - 0
    Type: "AWS::EC2::Subnet"
    Properties:
      CidrBlock: !Ref VpcCidr
      MapPublicIpOnLaunch: true
      VpcId: !Ref Vpc
      Tags:
        - Key: "Name"
          Value: !Join ["-", [!Ref Prefix, "subnet"]]
        - Key: "CostCenter"
          Value: !Ref CostCenter
        - Key: "Owner"
          Value: !Ref Owner

  PublicSubnetARouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PublicSubnetRouteTable
      SubnetId: !Ref PublicSubnet

Outputs:
  PublicSubnetId:
    Description: Public Subnet Id
    Value: !Ref PublicSubnet
    Export:
      Name: !Sub ${AWS::Region}-Cloud9-Subnet
